--- a/Flaintartist/SimilarCell.xib
+++ b/Flaintartist/SimilarCell.xib
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,14 +11,15 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SimilarCell" id="qc2-wr-aDx" customClass="SimilarCell" customModule="Flaintartist" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+            <rect key="frame" x="0.0" y="0.0" width="47" height="47"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                <rect key="frame" x="0.0" y="0.0" width="47" height="47"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fYa-Ra-UKE">
-                        <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="artist" translatesAutoresizingMaskIntoConstraints="NO" id="fYa-Ra-UKE">
+                        <rect key="frame" x="0.0" y="0.0" width="47" height="47"/>
+                        <color key="backgroundColor" red="0.67455112934112549" green="0.15692374110221863" blue="0.10914970934391022" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                 </subviews>
             </view>
@@ -29,11 +29,11 @@
                 <constraint firstItem="fYa-Ra-UKE" firstAttribute="leading" secondItem="qc2-wr-aDx" secondAttribute="leading" id="iuQ-r6-YSk"/>
                 <constraint firstAttribute="trailing" secondItem="fYa-Ra-UKE" secondAttribute="trailing" id="ppH-Vu-e3H"/>
             </constraints>
-            <size key="customSize" width="67" height="64"/>
-            <connections>
-                <outlet property="artImageView" destination="fYa-Ra-UKE" id="xaM-uP-iie"/>
-            </connections>
-            <point key="canvasLocation" x="-167" y="-180"/>
+            <size key="customSize" width="44" height="41"/>
+            <point key="canvasLocation" x="-178.5" y="-168.5"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="artist" width="4896" height="3264"/>
+    </resources>
 </document>
